Closed
Bug 1377605
Opened 8 years ago
Closed 8 years ago
mingw errors on signed vs unsigned comparison
Categories
(Core :: General, defect)
Core
General
Tracking
()
RESOLVED
FIXED
mozilla56
| Tracking | Status | |
|---|---|---|
| firefox56 | --- | fixed |
People
(Reporter: tjr, Assigned: tjr)
References
Details
(Whiteboard: [tor])
Attachments
(1 file)
> /home/worker/workspace/build/src/mozglue/misc/StackWalk.cpp:589:15: error: comparison between signed and unsigned integer expressions [-Werror=sign-compare]
> INFO - if (ret == -1) {
Here ret is a DWORD, the result of SuspendThread(), whose error return is defined as `(DWORD) -1`.
Cast to DWORD to prevent the error.
| Comment hidden (mozreview-request) |
| Comment hidden (mozreview-request) |
Comment 3•8 years ago
|
||
| mozreview-review | ||
Comment on attachment 8882746 [details]
Bug 1377605 Cast -1 to DWORD to correctly match the error return value given by SuspendThread
https://reviewboard.mozilla.org/r/153856/#review159936
Attachment #8882746 -
Flags: review?(aklotz) → review+
| Assignee | ||
Updated•8 years ago
|
Keywords: checkin-needed
Pushed by cbook@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/4cc4de1e5897
Cast -1 to DWORD to correctly match the error return value given by SuspendThread r=aklotz
Keywords: checkin-needed
Comment 5•8 years ago
|
||
| bugherder | ||
Status: NEW → RESOLVED
Closed: 8 years ago
status-firefox56:
--- → fixed
Resolution: --- → FIXED
Target Milestone: --- → mozilla56
You need to log in
before you can comment on or make changes to this bug.
Description
•