Bug 1377605 Cast -1 to DWORD to correctly match the error return value given by SuspendThread r=aklotz

MozReview-Commit-ID: 5XHgkpQJQKY